[package]
name = "easy-hasher"
version = "0.12.4"
authors = ["mrinfmag <mrinfmag@gmail.com>"]
edition = "2018"
description = "Easy hashing library"
repository = "https://github.com/mrinfmag/easy-hasher"
license = "MIT"
keywords = ["hash", "sha2", "sha3", "md5", "crc"]
categories = ["cryptography"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha1 = "0.6.0"
sha2 = "0.8.1"
sha3 = "0.8.2"
crc = "1.8.1"
crc8 = "0.1.1"
crc16 = "0.4.0"